# ess

./: .appveyor.yml  .clang-tidy  .travis.yml  CMakeLists.txt  README.md  conanfile.txt  readme.md
cmake/: clang-format.cmake  clang-tidy.cmake  cmakelint.cmake  compiler.cmake  cppcheck.cmake  lizard.cmake  validate_compiler.cmake
compilation_tests/: CMakeLists.txt  basic_geometry_compilation_test.in.cpp  point_bool_compilation_test.cpp  readme.md
ess/: CMakeLists.txt
ess/ess/: basic_geometry.h
include/: basic_geometry.h  point.h
tools/: validate_formatting.sh
unit_tests/: CMakeLists.txt  point_test.cpp
